# flood-shared-library

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cross_build.sh  install_opencv.sh
cmake/: arm_linux_setup.cmake
include/: bitSTIV.h
src/: CMakeLists.txt  bitSTIV.cpp  print.hpp
tests/: CMakeLists.txt  bitSTIV_test.cpp  bitSTIV_test.hpp  unit_tests.cpp
