message(STATUS "current platform: ${CMAKE_SYSTEM_NAME}")
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
  if(DEFINED ENV{OPENCV_ROOT})
    list(APPEND CMAKE_PREFIX_PATH "$ENV{OPENCV_ROOT}")
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
  else()
    message(FATAL_ERROR"NOT DEFINED OPENCV_ROOT VARIABLES\n
      OPENCV_ROOT is set to ...\\opencv\\build")
  endif()
endif()
find_package(OpenCV REQUIRED)

add_executable(unit_tests unit_tests.cpp)
target_link_libraries(unit_tests PRIVATE ${PROJECT_NAME} ${OpenCV_LIBS})
set(IMG_PATH "${CMAKE_CURRENT_LIST_DIR}/imgs/test.jpg")
file(TO_NATIVE_PATH ${IMG_PATH} IMG_PATH)
add_test(NAME unit_tests COMMAND unit_tests 1 ${IMG_PATH})
